4-llama-stack/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
  namespace: llamastack
spec:
  podSelector:
    matchLabels:
      app: llama-stack
      app.kubernetes.io/instance: llamastack-custom-distribution
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    ports:
    - protocol: TCP
      port: 8321
